<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo_view_principal_health"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo_health"
        android:contentDescription="@string/logo_health_prototip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"/>
    <EditText
        android:id="@+id/nomLoginSesio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_view_principal_health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/ContraseñaLoginSesio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Contrasenya"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/nomLoginSesio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_iniciar_sesion_mainActivity"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo_view_principal_health"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_registrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:text="@string/link_registrarse_mainActivity"
        android:gravity="right"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txt_invitado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_iniciar_sesion"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/txt_invitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linko_continuar_como_invitado_mainActivity"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_iniciar_sesion"
        app:layout_constraintStart_toEndOf="@id/txt_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>